t+mi:[[pūmatū]] ([[WT:EDIT|Assisted]]) <substance#35306378>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -75,7 +75,7 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 * Korean: {{t+|ko|물질|sc=Kore}}
 * Latin: {{t|la|substantia|f}}
 * Latvian: {{t|lv|viela|f}}
-* Maori: {{t|mi|matū}}
+* Maori: {{t|mi|matū}}, {{t|mi|pūmatū}}
 * Norwegian: {{t|no|substans|m}}, {{t+|no|masse|m}}
 * Polish: {{t+|pl|substancja|f}}
 * Portuguese: {{t+|pt|substância|f}}
