t+pl:[[liczenie]] t-balance ([[WT:EDIT|Assisted]]) <count#35310852>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -209,6 +209,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Greek: {{t+|el|μέτρημα|n}}, {{t+|el|μέτρηση|f}}, {{t+|el|καταμέτρηση|f}}
 * Icelandic: {{t|is|talning|f}}
 * Italian: {{t+|it|conto|m}}, {{t+|it|conteggio|m}}, {{t+|it|calcolo|m}}
+* Polish: {{t+|pl|liczenie}}
 * Portuguese: {{t+|pt|contagem|f}}
 * Quechua: {{t|qu|yupa}}
 * Romanian: {{t+|ro|socoti}}
