t+fo:[[blomma]] ([[WT:EDIT|Assisted]]) <plum#35326777>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -185,6 +185,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * Dutch: {{t+|nl|pruim}}
 * Esperanto: {{t|eo|pruno}}
 * Estonian: {{t+|et|ploom}}
+* Faroese: {{t|fo|blomma|f}}
 * Finnish: {{t+|fi|luumu}}
 * French: {{t+|fr|prune|f}}
 * Friulian: {{t|fur|ciespe|f}}, {{t|fur|emul}}, {{t|fur|bromb|m}}, {{t|fur|brugnul|m}}, {{t|fur|siespe|f}}
