t+kl:[[oliveni]] t-balance ([[WT:EDIT|Assisted]]) <olive#35335383>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -73,6 +73,7 @@
 * German: {{t+|de|Olive|f}}
 * Greek: {{t+|el|ελιά|f}}
 *: Ancient: {{t|grc|ἐλαίᾱ|f}}
+* Greenlandic: {{t|kl|oliveni}}
 * Gujarati: {{t|gu|ઓલિવ|m|tr=ōliva|sc=Gujr}}, {{t|gu|જૈતૂન|n|tr=jaitūn|sc=Gujr}}
 * Hausa: {{t|ha|zaitun|m|alt=zàitûn}}
 * Hebrew: {{t+|he|זית|tr=zait}}
@@ -82,8 +83,8 @@
 * Ido: {{t+|io|olivo}}
 * Indonesian: {{t+|id|zaitun}}
 * Irish: {{t|ga|ológ|f}}
-* Italian: {{t+|it|oliva|m}}
 {{trans-mid}}
+* Italian: {{t+|it|oliva|m}}
 * Japanese: {{t|ja|オリーブ|tr=orību}}
 * Kazakh: {{t|kk|зәйтүн|sc=Cyrl}}
 * Khmer: {{t|km|ផ្លែអូលីវ|tr=plae ooliiv|sc=Khmr}}
