t+se:[[Frankriika]] ([[WT:EDIT|Assisted]]) <France#35358918>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -139,6 +139,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Navajo: {{t|nv|Dáághahii Dinéʼiʼ bikéyah|sc=Latn}}
 * Neapolitan: {{t|nap|Franza|f}}
 * Norman: {{t|nrf|France|f}} {{qualifier|Jersey}}
+* Northern Sami: {{t|se|Frankriika}}
 * Norwegian: {{t+|no|Frankrike}} (Franske Republikk, Republikken Frankrike)
 * Novial: {{t|nov|Fransia}}
 * Occitan: {{t+|oc|França|f}}
