--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -222,6 +222,7 @@
 * Greek: {{t+|el|λαδής}}
 * Japanese: {{t|ja|オリーブ色|tr=orību-iro}}
 * Kurdish: {{t|ku|zeytûnî}}, [[reng]][[zeytûnî]]
+* Maori: {{t|mi|kārikihāura}}
 * Portuguese: {{t|pt|verde-azeitona}}, {{t|pt|verde-oliva}}
 * Russian: {{t+|ru|оли́вковый}}
 {{trans-mid}}
