--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -45,6 +45,7 @@
 * Hindi: {{t|hi|चेक रिपब्लिक|tr=cek ripablik|sc=Deva}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}
 * Icelandic: {{t|is|Tékkneska lýðveldið|n}}, {{t+|is|Tékkland|n}}
+* Ido: {{t+|io|Chekia}}
 * Interlingua: {{t|ia|Republica Chec}}
 * Irish: {{t|ga|Poblacht na Seice|f}}, {{t|ga|Seic|f|alt=an tSeic}}
 * Italian: {{t+|it|Repubblica Ceca|f}}
