--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -20,13 +20,13 @@
 {{zh-pron
 |m=xiǎng
 |c=soeng2
-|h=pfs=síong;hpy=xiong3
+|h=pfs=sióng;hpy=xiong3
 |mn=siūⁿ/sióng
 |mn_note=siūⁿ - vernacular, sióng - literary
 |w=
 |mc=y
 |oc=y
-|ma=zh-xiǎng.ogg
+|ma=y
 |cat=v
 }}
 
