--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -46,47 +46,43 @@
 #* {{zh-usex|你 走 了 我 會 '''想''' 你 的。|I'll '''miss''' you when you're gone.}}
 
 =====Compounds=====
-{{rel-top3}}
-* [[想必]]
-* [[想不到]]
-* [[想不开]]、[[想不開]]
-* [[想当然]]、[[想當然]]
-* [[想得开]]、[[想得開]]
-* [[想得美]]
-* [[想到]]
-* [[想法]]
-* [[想方设法]]、[[想方設法]]
-* [[想家]]
-* [[想开]]、[[想開]]
-* [[想来]]、[[想來]]
-* [[想念]]
-{{rel-mid3}}
-* [[想起]]
-* [[想起来]]、[[想起來]]
-* [[想入非非]]
-* [[想睡]]
-* [[想通]]
-* [[想望]]
-* [[想象]]
-* [[想象力]]
-* [[想像]]
-* [[想像力]]
-* [[想要]]
-* [[猜想]]
-{{rel-mid3}}
-* [[感想]]
-* [[构想]]、[[構想]]
-* [[幻想]]
-* [[回想]]
-* [[空想]]
-* [[理想]]
-* [[梦想]]、[[夢想]]
-* [[瞑想]]
-* [[思前想后]]、[[思前想後]]
-* [[妄想]]
-* [[心想事成]]
-* [[意想]]
-{{rel-bottom}}
+{{der3|title=Compounds
+| {{zh-l|想必}}
+| {{zh-l|想不到}}
+| {{zh-l|想不開}}
+| {{zh-l|想當然}}
+| {{zh-l|想得開}}
+| {{zh-l|想得美}}
+| {{zh-l|想到}}
+| {{zh-l|想法}}
+| {{zh-l|想方設法}}
+| {{zh-l|想家}}
+| {{zh-l|想開}}
+| {{zh-l|想來}}
+| {{zh-l|想念}}
+| {{zh-l|想起}}
+| {{zh-l|想起來}}
+| {{zh-l|想入非非}}
+| {{zh-l|想睡}}
+| {{zh-l|想通}}
+| {{zh-l|想望}}
+| {{zh-l|想像/想象}}
+| {{zh-l|想像/想象力}}
+| {{zh-l|想要}}
+| {{zh-l|猜想}}
+| {{zh-l|感想}}
+| {{zh-l|構想}}
+| {{zh-l|幻想}}
+| {{zh-l|回想}}
+| {{zh-l|空想}}
+| {{zh-l|理想}}
+| {{zh-l|夢想}}
+| {{zh-l|瞑想}}
+| {{zh-l|思前想後}}
+| {{zh-l|妄想}}
+| {{zh-l|心想事成}}
+| {{zh-l|意想}}
+}}
 
 ====References====
 * (''Hakka'') [http://minhakka.ling.sinica.edu.tw/bkg/hakyin/search.php?DETAIL=1&LIMIT=id=39415&dbname=su_tian_1&graph=2 Academia Sinica - Hakka-English Dictionary]
