/* Derived terms */ <stab#35382641>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -117,6 +117,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, t
 #: {{usex|lang=en|to '''stab''' a person's reputation}}
 
 ====Derived terms====
+* [[stabbee]]
 * [[stabber]]
 
 ====Translations====
