--- a/en/显/显.16999.wikitext
+++ b/en/显/显.16999.wikitext
@@ -1,6 +1,6 @@
 {{also|顯}}
 ==Translingual==
-{{ja-forms|[[顕]]|显|[[顯]]}}
+{{Han simplified forms|顯|顕|显}}
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=ATC|ids=⿱日业}}
