--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -92,6 +92,9 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 # {{lb|en|transitive}} To [[manipulate]] or [[deceive]] someone.
 #: {{ux|en|You '''played''' me!}}
 
+====Hyperonyms====
+* {{sense|for games}} [[touch]], [[try]]
+
 ====Conjugation====
 {{en-conj-simple}}
 
