--- a/en/ש/שבוע.2113.wikitext
+++ b/en/ש/שבוע.2113.wikitext
@@ -7,7 +7,7 @@ From the root {{term|שׁ־ב־ע|lang=he|tr=sh-v-`}}, from {{term|שבע||seven
 * {{a|Modern Hebrew}} {{IPA|/ʃaˈvua(ʕ)/|lang=he}}
 
 ===Noun===
-{{he-noun|wv=שָׁבוּעַ|tr=shavúa|g=m|dual=שבועיים|dualdwv=שְׁבוּעַיִם|pl=שבועות|plwv=שָׁבוּעוֹת|cons=שבוע|conswv=שְׁבוּעַ־|plcons=שבועות|plconswv=שְׁבוּעוֹת}}
+{{he-noun|wv=שָׁבוּעַ|tr=shavúa|g=m|dual=שבועיים|dualdwv=שְׁבוּעַיִם|pl=שָׁבוּעוֹת|cons=שְׁבוּעַ|plcons=שְׁבוּעוֹת}}
 
 # A [[week]]; a period of [[seven]] [[day]]s.
 
