--- a/en/傐/傐.11168.wikitext
+++ b/en/傐/傐.11168.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=|canj=OYRB|ids=⿰亻高}}
 
-# {{defn|Han|sort=人10}}
+#an ancient northern Chinese place name
 
 ====References====
 * {{Han ref|kx=0113.080|dkj=00954|hdz=10204.090|uh=5090|ud=20624}}
@@ -27,7 +27,7 @@
 ===Hanzi===
 {{cmn-hanzi|pin=[[hào]] ([[hao4]])|wg=hao<sup>4</sup>}}
 
-# {{defn|lang=cmn|sort=人10}}
+#an ancient northern Chinese place name
 
 [[fr:傐]]
 [[hu:傐]]
