t+lt:[[t.y.]] ([[WT:EDIT|Assisted]]) <i.e.#35394689>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -46,6 +46,7 @@ From {{etyl|la|en}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id 
 * Italian: {{t+|it|cioè}}
 {{trans-mid}}
 * Japanese: {{t|ja|すなわち|tr=sunawachi|sc=Jpan}}
+* Lithuanian: {{t|lt|t.y.}} {{qualifier|initialism}}
 * Lojban: {{t|jbo|va'i}}
 * Malay: {{t|ms|iaitu}}, {{t|ms|yakni}}
 * Malayalam: {{t|ml|അതായത്|sc=Mlym}}
