--- a/en/坴/坴.13047.wikitext
+++ b/en/坴/坴.13047.wikitext
@@ -50,7 +50,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[kē]] ([[ke1]]), [[liù]] ([[liu4]])|wg=k'o<sup>1</sup>, liu<sup>4</sup>}}
+{{cmn-hanzi|pin=[[lù]] ([[lu4]])|wg=lu<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=土05}}
 
