--- a/en/坴/坴.13047.wikitext
+++ b/en/坴/坴.13047.wikitext
@@ -6,9 +6,6 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=40104|canj=GCG|ids=⿱圥土}}
 
-# a [[clod]] of [[earth]]
-# [[land]]
-
 ====Derived characters====
 * [[睦]], [[陸]], [[稑]], [[逵]], [[鵱]], [[燅]], [[埶]], [[鯥]], [[𪂚]], [[𡎐]]
 
@@ -17,12 +14,22 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=luk6}}
+===Pronunciation===
+{{zh-pron
+|m=lù
+|c=luk6
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+# a [[clod]] of [[earth]]
+# [[land]]
 
 ----
 
@@ -44,15 +51,6 @@
 {{ko-hanja|hangeul=[[륙]], [[육]]|eumhun=|rv=ryuk, yuk|mr=ryuk, yuk|y=lyuk, yuk}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[lù]] ([[lu4]])|wg=lu<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 [[fr:坴]]
 [[hu:坴]]
