--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -404,6 +404,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Finnish: [[rakentaa#Finnish|rakentaa]] [[silta#Finnish|silta]] [[jonkin#Finnish|jonkin]] {{t+|fi|yli}}
 {{trans-mid}}
 * German: {{t|de|überbrücken}}
+* Maori: {{t|mi|kahupapa}}
 * Quechua: {{t|qu|chakachay}}
 {{trans-bottom}}
 
