--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -88,6 +88,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Swedish: {{t+|sv|pyjamas|c}}
 * Tagalog: {{t|tl|pandiyama}}, {{t|tl|padyama}}
 * Tajik: {{t|tg|пижама|sc=Cyrl}}
+* Telugu: {{t|te|పైజామా|sc=Telu}}
 * Thai: {{t|th|ชุดนอน|tr=chút-non|sc=Thai}}
 * Turkish: {{t+|tr|pijama}}
 * Turkmen: {{t|tk|pijama}}
