--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -96,7 +96,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Urdu: {{t|ur|پاجاما|tr=pājāmā|sc=ur-Arab}}, {{t|ur|پایجامه|tr=paijāmā|sc=ur-Arab}}
 * Uzbek: {{t+|uz|pijama}}
 * Vietnamese: {{t|vi|pijama}}, {{t|vi|quần áo ngủ}}
-* Yiddish: {{t|yi|פּיזשאַמע|sc=Hebr}}
+* Yiddish: {{t|yi|פּיזשאַמעס|f}}
 {{trans-bottom}}
 
 {{trans-top|loose-fitting trousers worn in the Far East}}
