--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -48,6 +48,7 @@
 * Basque: {{t|eu|oliba}}
 * Belarusian: {{t|be|алі́ўка|f|sc=Cyrl}}, {{t|be|маслі́на|f|sc=Cyrl}}
 * Bengali: {{t|bn|জলপাই|tr=jôlôpa'i|sc=Beng}}
+* Bole: {{t|bol|zaitun}}
 * Breton: {{t|br|oliv|f}}
 * Bulgarian: {{t|bg|масли́на|f|sc=Cyrl}}
 * Burmese: {{t+|my|သံလွင်|sc=Mymr}}
@@ -75,7 +76,7 @@
 *: Ancient: {{t|grc|ἐλαίᾱ|f}}
 * Greenlandic: {{t|kl|oliveni}}
 * Gujarati: {{t|gu|ઓલિવ|m|tr=ōliva|sc=Gujr}}, {{t|gu|જૈતૂન|n|tr=jaitūn|sc=Gujr}}
-* Hausa: {{t|ha|zaitun|m|alt=zàitûn}}
+* Hausa: {{t|ha|zaitun|m|alt=zàitûn}}, {{t+|ha|zaitun}}
 * Hebrew: {{t+|he|זית|tr=zait}}
 * Hindi: {{t|hi|ज़ैतून|tr=zaitūn}}, {{t|hi|तैलबदर|m|tr=tailbadara|sc=Deva}}
 * Hungarian: {{t+|hu|olajbogyó}}
@@ -86,6 +87,7 @@
 {{trans-mid}}
 * Italian: {{t+|it|oliva|m}}
 * Japanese: {{t|ja|オリーブ|tr=orību}}
+* Karekare: {{t|kai|zambatu}}
 * Kazakh: {{t|kk|зәйтүн|sc=Cyrl}}
 * Khmer: {{t|km|ផ្លែអូលីវ|tr=plae ooliiv|sc=Khmr}}
 * Korean: {{t+|ko|올리브|tr=ollibeu}}
@@ -102,6 +104,7 @@
 * Maori: {{t|mi|ōriwa}}
 * Middle Persian: {{t|pal|𐭦𐭩𐭲𐭩|tr=zayt|sc=Phli}}
 * Mongolian: {{t|mn|чидун жимс|sc=Cyrl}}
+* Ngizim: {{t|ngi|zatun}}
 * Norwegian: {{t|no|oliven}}
 * Occitan: {{t+|oc|oliva|f}}
 * Persian: {{t+|fa|زیتون|tr=zeytun}}
