/* Translations */ Lithuanian <choose#35434190>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -162,7 +162,7 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 * Korean: {{t+|ko|고르다|sc=Hang}}
 * Latin: {{t|la|ēligo}}, {{t|la|dīligo}}, {{t+|la|lego}}
 * Latvian: {{t|lv|izvēlēties}}
-* Lithuanian: {{t-needed|lt}}
+* Lithuanian: {{t|lt|išrinkti}}
 * Malay: {{t|ms|pilih}}
 * Maltese: {{t|mt|ħatar}}, {{t|mt|talla'}}
 * Mongolian: {{t|mn|сонгох|sc=Cyrl}}
