--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -17,7 +17,10 @@ From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}. Compare {{etyl|ar|-}} {{m|ar
 # [[ground]], [[soil]]
 # {{context|definite|popular|lang=he}} [[Israel]]
 
-=====Usage notes=====
+====Declension====
+{{he-decl|אֶרֶץ|הָאָרֶץ|אַרְצוֹ|p|אֲרָצוֹת|אַרְצוֹת־}}
+
+====Usage notes====
 * The definite form of this noun is {{m|he|הָאָרֶץ|tr=ha'árets}}.
 
 ====Synonyms====
