--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -8,7 +8,7 @@
 * [[Fraunce]] {{qualifier|obsolete}}
 
 ===Etymology===
-From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=fro}}, {{etyl|la|en}} {{term|Francia|lang=la}}, from {{m|la|Francī}}, the name of a Germanic tribe. Etymology of ''Francī'' itself is uncertain, but of {{etyl|gem-pro|en}} origin, possibly related to Sanskrit {{term|firang||foreign|lang=sa|sc=Latn}}.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Compare {{term|Frank|lang=en}}.
+From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=fro}}, {{etyl|la|en}} {{term|Francia|lang=la}}, from {{m|la|Francī}}, the name of a Germanic tribe, of unclear (but {{etyl|gem-pro|en}}) origin.<ref>A. C. Murray, ''From Roman to Merovingian Gaul: A Reader''. Broadview Press Ltd, 2000. p. 1.</ref> Compare {{term|Frank|lang=en}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/fɹɑːns/|/fɹæns/|lang=en}}
