--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -129,7 +129,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Finnish: {{t+|fi|symboli}}, {{t+|fi|ikoni}}
 * French: {{t+|fr|icône|f}}
 * German: {{t+|de|Symbol|n}}
-* Greek: {{t+|el|πρότυπο|n}}, {{t+|el|υπόδειγμα|n}}
+* Greek: {{t+|el|πρότυπο|n}}, {{t+|el|είδωλο|n}}
 * Italian: {{t+|it|icona|f}}
 * Japanese: {{t+|ja|偶像|tr=ぐうぞう, gūzō}}
 * Polish: {{t+|pl|ikona|f}}, {{t+|pl|symbol|m}}
