--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -19,6 +19,9 @@
 ==Chinese==
 {{zh-forms}}
 
+===Alternative forms===
+* {{zh-l|𠃓}} (simplified form used only as a component)
+
 ===Pronunciation===
 {{zh-pron
 |m=yáng
