--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -20,7 +20,7 @@
 {{zh-forms}}
 
 ===Alternative forms===
-* {{zh-l|𠃓}} (simplified form used only as a component)
+* {{zh-l|𠃓}} (used only as a component)
 
 ===Pronunciation===
 {{zh-pron
