/* Noun */ translingual links <spelt#35473393>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -26,12 +26,12 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|spelt||spelt, corn|lang=ang}},
 ====Noun====
 {{en-noun|-}}
 
-# A grain, considered either a subspecies of [[wheat]], ''[[Triticum aestivum subsp. spelta]]'', or a separate species ''[[Triticum spelta]].
+# A grain, considered either a subspecies of [[wheat]], {{m|mul|Triticum aestivum subsp. spelta}}, or a separate species {{m|mul|Triticum spelta}}.
 
 =====See also=====
 * {{pedialite}}
-* [[emmer]]
-* [[farro]]
+* {{l|en|emmer}}
+* {{l|en|farro}}
 
 =====Translations=====
 {{trans-top|a type of wheat, Triticum aestivum spelta}}
