--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -28,6 +28,9 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|spelt||spelt, corn|lang=ang}},
 
 # A grain, considered either a subspecies of [[wheat]], {{m|mul|Triticum aestivum subsp. spelta}}, or a separate species {{m|mul|Triticum spelta}}.
 
+====Synonyms====
+* {{sense|spelt}} {{l|en|[[dinkel]] [[wheat]]}}, {{l|en|[[hulled]] [[wheat]]}}
+
 =====See also=====
 * {{pedialite}}
 * {{l|en|emmer}}
