--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -301,6 +301,7 @@ Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσ
 
 ===Pronunciation===
 * {{a|Portugal}} {{IPA|/iʒ.ʁɐ.ˈɛɫ/|lang=pt}}
+* {{a|Brazil}} {{IPA|/ˌiz.ʁa.ˈɛw/|lang=pt}}
 * {{hyphenation|Is|ra|el|lang=pt}}
 
 ===Proper noun===
