--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -98,6 +98,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Aramaic: {{t|arc|גֶּשֶׁר|m|tr=gešer}}
 *: Classical Syriac: {{t|syc|ܓܫܪܐ|sc=Syrc}}
 * Armenian: {{t+|hy|կամուրջ}}
+* Aromanian: {{t|rup|punti|f}}, {{t|rup|pumhi|f}}
 * Asturian: {{t|ast|ponte|f}}, {{t|ast|puente|m}}
 * Azeri: {{t+|az|körpü}}
 * Bashkir: {{t|ba|күпер|sc=Cyrl}}
