--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -55,7 +55,7 @@ Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 #*: when butter does refuse to '''come''' [i.e. to form]
 # {{label|en|intransitive}} To take a position to something else in a [[sequence]].
 #: {{ux|en|Which letter '''comes''' before Y?&nbsp;&nbsp; Winter '''comes''' after autumn.}}
-# {{label|en|intransitive|slang}} To achieve [[orgasm]]; to [[cum]].
+# {{label|en|intransitive|slang}} To achieve [[orgasm]]; to [[cum]]; to [[ejaculate]].
 #: {{ux|en|He '''came''' after a few minutes.}}
 # {{label|en|copulative|figuratively|with ''close''}} To [[approach]] a state of being or accomplishment.
 #: {{ux|en|They '''came''' very close to leaving on time.&nbsp;&nbsp; His test scores '''came''' close to perfect.}}
