--- a/en/o/observateur.1839.wikitext
+++ b/en/o/observateur.1839.wikitext
@@ -5,7 +5,7 @@
 
 ===Adjective===
 {{fr-adj|f=observatrice}}
-# [[observant]]
+#Having the [[ability]] to [[notice]] things; having [[power]] of [[observation]]; [[observant]].
 
 ===Noun===
 {{fr-noun|m|f=observatrice}}
