--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -382,6 +382,8 @@ Compare {{etyl|ae|-}} {{term|𐬌𐬭𐬌𐬏𐬙||lang=ae|tr=tūiri|curdled mil
 * [[butyraceous]]
 * [[ghee]]
 
+===Etymology 2===
+{{suffix|butt|er|lang=en}}
 
 ====Noun====
 {{en-noun}}
