t+ltg:[[syukt]] t+ltg:[[čuļpt]] ([[WT:EDIT|Assisted]]) <suck#35514584>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -106,6 +106,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Japanese: {{t|ja|吸う|tr=すう, suu}}, {{t|ja|しゃぶる|tr=shaburu}}
 * Korean: {{t+|ko|빨다|tr=ppalda}}
 * Kurdish: {{t+|ku|mêjîn}}, {{t+|ku|mêtin}}, {{t|ku|مژین|sc=ku-Arab}}
+* Latgalian: {{t|ltg|syukt}}, {{t|ltg|čuļpt}}
 * Latin: {{t+|la|sugo}}
 {{trans-mid}}
 * Latvian: {{t+|lv|sūkt}}
