--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -367,11 +367,17 @@ From {{inh|ang|gem-pro|*kust-}}, from {{etyl|ine-pro|ang}} {{m|ine-pro|*ǵews-||
 
 ==Welsh==
 
+===Etymology===
+{{borrowing|cy|en|cost}}.
+
 ===Noun===
 {{cy-noun|mf|costau}}
 
 # {{l|en|cost}}
 # [[expense]]
+
+===Mutation===
+{{cy-mut-auto}}
 
 [[ca:cost]]
 [[cs:cost]]
