--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -260,6 +260,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Galician: {{t+|gl|falar}}
 * German: {{t+|de|sprechen}}
 * Hebrew: {{t+|he|דיבר|tr=dibér}}
+* Hindi: {{t+|hi|बोलना|sc=Deva}}
 * Italian: {{t+|it|parlare}}
 {{trans-mid}}
 * Japanese: {{t+|ja|話す|tr=はなす, hanasu|sc=Jpan}}
