--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -224,6 +224,24 @@ From {{etyl|ltc|ja|sort=ち}} {{m|zh|地|tr=dij<sup>H</sup>}}. The [[漢音#Japa
 
 # [[place]], [[area]]
 
+===Etymology 3===
+{{ja-kanjitab|yomi=k|つち}}
+From {{etyl|ojp|ja|sort=つち}}.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref><ref name="DJR">{{R:Daijirin}}</ref>
+
+====Pronunciation====
+{{ja-pron|yomi=k|つち|acc=2|acc_ref=DJR}}
+
+====Alternative forms====
+* {{ja-l|土}} {{qualifier|more common for this reading}}
+
+====Noun====
+{{ja-noun|つち}}
+
+# [[earth]], [[dirt]], [[mud]], [[soil]]
+# the [[ground]]
+# the [[earth]] {{qualifier|as opposed to the heavens}}
+# the [[ground]] or [[bottom]] of something {{qualifier|as of a price range}}
+
 ===References===
 <references/>
 
