--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -138,6 +138,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Irish: {{t|ga|imir}}, {{t|ga|súgradh}}
 * Italian: {{t+|it|giocare}}
 * Japanese: {{t+|ja|遊ぶ|tr=あそぶ, asobu|sc=Jpan}}
+* Ngunawal: {{t|xul|woggabaliri}}
 * Norman: {{t|nrf|jouer}}
 * Korean: {{t+|ko|놀다|sc=Kore}}
 * Kurdish:
