--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -366,6 +366,7 @@ Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσ
 [[ast:Israel]]
 [[az:Israel]]
 [[bg:Israel]]
+[[bn:Israel]]
 [[ca:Israel]]
 [[cs:Israel]]
 [[da:Israel]]
