--- a/en/坡/坡.13028.wikitext
+++ b/en/坡/坡.13028.wikitext
@@ -4,19 +4,26 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=44147|canj=GDHE|ids=⿰土皮}}
 
-# [[slope]], [[bank]], [[hillside]]
-
 ====References====
 * {{Han ref|kx=0226.110|dkj=04966|dj=0461.250|hdz=10436.010|uh=5761|ud=22369|bh=A959|bd=43353}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[bo1]], [[po1]]|y=bo1, po1}}
+===Pronunciation===
+{{zh-pron
+|m=pō
+|c=bo1,po1
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=土05}}
+===Definitions===
+# [[slope]], [[bank]], [[hillside]]
 
 ----
 
@@ -38,15 +45,6 @@
 {{ko-hanja|hangeul=파|rv=pa|mr=p'a}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[pō]] ([[po1]])|wg=p'o<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
