--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -87,7 +87,7 @@
 ====References====
 * (''Hakka'') [http://minhakka.ling.sinica.edu.tw/bkg/hakyin/search.php?DETAIL=1&LIMIT=id=39415&dbname=su_tian_1&graph=2 Academia Sinica - Hakka-English Dictionary]
 * (''Hakka'') Lau, Chun-fat. ''Hakka Pinyin Dictionary'' (Chinese). [[Hong Kong]]: [[w:Chinese University of Hong Kong|The Chinese University Press]], 1997 <small>(Chinese IME supplement)</small> ISBN 962-201-750-9.
-* (''Min Nan'') [http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=9451&curpage=1&sample=%E6%83%B3&radiobutton=1&querytarget=1&limit=20&pagenum=2&rowcount=31 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
+* (''Min Nan'') {{thcwd|9450}}
 
 ----
 
