--- a/en/偪/偪.11130.wikitext
+++ b/en/偪/偪.11130.wikitext
@@ -28,7 +28,10 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
 
-# {{defn|lang=ja|sort=人09}}
+# [[compel]]
+# [[pressure]]
+# [[force]]
+# [[bother]]
 
 ====Readings====
 * {{ja-readings|on=[[ひょく]] (hyoku), [[ひき]] (hiki), [[ふく]] (fuku)|kun=[[せまる]] (semaru), [[むかばき]] (mukabaki)}}
