--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -237,7 +237,7 @@ Compare {{etyl|ae|-}} {{term|𐬌𐬭𐬌𐬏𐬙||lang=ae|tr=tūiri|curdled mil
 * Japanese: {{t+|ja|バター|tr=batā}}, {{t|ja|牛酪|tr=ぎゅうらく, gyūraku|sc=Jpan}}, {{t+|ja|乳酪|tr=[[にゅうらく]], nyūraku}}
 * Norman: {{t|nrf|beurre|m}}
 * Kannada: {{t+|kn|ಬೆಣ್ಣೆ|sc=Knda}}
-* Kazakh: {{t|kk|май|sc=Cyrl}}
+* Kazakh: {{t|kk|май|sc=Cyrl}}, {{t|kk|сармай|sc=Cyrl}}, {{t|kk|сары май|sc=Cyrl}}
 * Khmer: {{t|km|បឺរ|tr=bər|sc=Khmr}}, {{t|km|ខ្លាញ់ទឹកដោះ|tr=klañ tɨk dɑh|sc=Khmr}}
 * Kinyarwanda: {{t|rw|amavuta}}
 * Kirundi: {{t|rn|ama-vuta}}
