--- a/en/倩/倩.11043.wikitext
+++ b/en/倩/倩.11043.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=08|sn=10|four=25227|canj=OQMB|ids=⿰亻青<sub>(GTV)</sub> or ⿰亻靑<sub>(JK)</sub>}}
+{{Han char|rn=9|rad=人|as=08|sn=10|four=25227|canj=OQMB|ids=⿰亻青<sub>(GTV)</sub>,⿰亻靑<sub>(JK)</sub>}}
 
 # [[beautiful]], [[lovely]]
 # [[son-in-law]]
