--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -47,6 +47,7 @@ From {{etyl|enm|en}} {{m|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, from 
 #* Bible, Exodus xxi. 32
 #*: If the ox shall '''push''' a manservant or maidservant, {{...}} the ox shall be stoned.
 # To burst out of its pot, as a bud or shoot.
+# {{cx|snooker|lang=en}} To strike the [[cue ball]] in such a way that it stays in contact with the [[cue]] and [[object ball]] at the same time (a foul shot)
 
 =====Synonyms=====
 * {{sense|transitive: apply a force to (an object) so it moves away}} [[press]], [[shove]], [[thrutch]]
