--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -19,11 +19,11 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 #* {{quote-book|year=1918|author={{w|W. B. Maxwell}}|chapter=13
 |title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]
 |passage=And Vickers launched forth into a tirade very different from his platform utterances. He '''spoke''' with extreme contempt of the dense stupidity exhibited on all occasions by the working classes. He said that if you wanted to do anything for them, you must rule them, not pamper them.}}
-#: {{usex|lang=en|I was so surprised I couldn't '''speak'''.&nbsp;&nbsp; You're '''speaking''' too fast.}}
+#: {{usex|lang=en|I was so surprised I couldn't '''speak'''.<br>You're '''speaking''' too fast.}}
 # {{context|intransitive|lang=en}} To have a [[conversation]].
 #: {{usex|lang=en|It's been ages since we've '''spoken'''.}}
 # {{context|by extension|lang=en}} To [[communicate]] or [[converse]] by some means other than [[orally]], such as [[writing]] or [[facial]] [[expressions]].
-#: {{usex|lang=en|He '''spoke''' of it in his diary.&nbsp;&nbsp; '''Speak''' to me only with your eyes.&nbsp;&nbsp; I just '''spoke''' with them on IRC.&nbsp;&nbsp; Actions '''speak''' louder than words.}}
+#: {{usex|lang=en|He '''spoke''' of it in his diary.<br>'''Speak''' to me only with your eyes.<br>Actions '''speak''' louder than words.}}
 # {{context|intransitive|lang=en}} To deliver a message to a group; to deliver a [[speech]].
 #: {{usex|lang=en|This evening I shall '''speak''' on the topic of correct English usage.}}
 # {{context|transitive|lang=en}} To be able to communicate in a [[language]].
@@ -36,7 +36,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 #* '''1851''', {{w|Herman Melville}}, ''{{w|Moby-Dick}}'':
 #*: There he sat, his very indifference '''speaking''' a nature in which there lurked no civilized hypocrisies and bland deceits.
 # {{context|informal|transitive|sometimes|humorous|lang=en}} To [[understand]] (as though it were a language).
-#: {{usex|lang=en|Sorry, I don't '''speak''' idiot.&nbsp;&nbsp; So you can program in C. But do you '''speak''' C++?}}
+#: {{usex|lang=en|Sorry, I don't '''speak''' idiot.<br>So you can program in C. But do you '''speak''' C++?}}
 # {{context|intransitive|lang=en}} To produce a sound; to [[sound]].
 #* Shakespeare
 #*: Make all our trumpets '''speak'''.
