t+yo:[[igbejako]] ([[WT:EDIT|Assisted]]) <fight#35708633>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -366,6 +366,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Thai: {{t-needed|th}}
 * Tok Pisin: {{t|tpi|pait}}
 * Ukrainian: {{t+|uk|бі́йка|f|sc=Cyrl}}, {{t+|uk|бій|m|sc=Cyrl}}, {{t|uk|сути́чка|f|sc=Cyrl}}
+* Yoruba: {{t|yo|igbejako}}
 {{trans-bottom}}
 
 {{trans-top|battle}}
