--- a/en/旣/旣.16908.wikitext
+++ b/en/旣/旣.16908.wikitext
@@ -4,22 +4,13 @@
 ===Han character===
 {{Han char|rn=71|rad=无|as=07|sn=11|four=|canj=HPMVU|ids=⿰皀旡}}
 
-# [[already]]
-# [[de facto]]
-# [[since]]
-# [[then]]
-
 ====References====
 * {{Han ref|kx=0485.300|dkj=13724|dj=0848.060|hdz=21148.050|uh=65E3|ud=26083}}
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[gei3]]|y=gei3}}
-
-# {{defn|lang=yue|sort=无07}}
+==Chinese==
+{{zh-see|既|v}}
 
 ----
 
@@ -28,7 +19,10 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=无07}}
 
-# {{defn|lang=ja|sort=无07}}
+# [[already]]
+# [[de facto]]
+# [[since]]
+# [[then]]
 
 ====Readings====
 * {{ja-readings|on=[[き]] (ki)|kun=[[つきる]] (tsukiru), [[すでに]] (sudeni)}}
@@ -41,15 +35,6 @@
 {{ko-hanja|hangeul=기|eumhun=|rv=gi|mr=ki|y=ki}}
 
 # {{defn|lang=ko|sort=无07}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[jì]] ([[ji4]]), [[xì]] ([[xi4]])|wg=chi<sup>4</sup>, hsi<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=无07}}
 
 [[fr:旣]]
 [[ko:旣]]
