/* Derived terms */ <come#35781683>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -110,6 +110,8 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * {{l|en|come across}}
 * {{l|en|come across with}}
 * {{l|en|come after}}
+* {{l|en|come again}}
+* {{l|en|come and}}
 * {{l|en|come aloft}}
 * {{l|en|come along}}
 * {{l|en|come around}}
