--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -77,7 +77,7 @@ From the {{etyl|nl|af}} 3rd person singular of {{m|nl|hebben}}, which is {{m|nl|
 * {{audio|Nl-het.ogg|audio (Netherlands)|lang=nl}}
 
 ===Etymology 1===
-From {{inh|nl|dum|dat}}, which was contracted to {{m|dum|'t}} in usual speech. This form was later interpreted as being the same as the neuter pronoun {{term|het|lang=nl}} (etymology 2, see below), which was contracted in the same way. This then led to the modern spelling ''het'', which might be seen as unetymological.
+From {{inh|nl|dum|dat}}, which was contracted to {{m|dum|'t}} in usual speech. This form was later interpreted as being the same as the neuter pronoun {{term|het|lang=nl}} (etymology 2, see below), which was contracted in the same way. This then led to the modern form/spelling ''het'', which might be seen as unetymological.
 
 ====Article====
 {{head|nl|article|g=n}}
