t+ko:[[성상]] t+ko:[[성화]] t+ko:[[아이콘]] t-balance ([[WT:EDIT|Assisted]]) <icon#35821063>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -94,11 +94,11 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * German: {{t+|de|Ikone|f}}
 * Greek: {{t+|el|εικόνα|f}}, {{t+|el|εικόνισμα|n}}
 * Hungarian: {{t+|hu|ikon}}
-{{trans-mid}}
 * Indonesian: {{t+|id|arca}}
+{{trans-mid}}
 * Italian: {{t+|it|icona|f}}
 * Japanese: {{t|ja|聖像|tr=せいぞう, seizō}}
-* Korean: {{t|ko|이콘|sc=Kore}}
+* Korean: {{t|ko|이콘|sc=Kore}}, {{t|ko|성상|sc=Kore}}, {{t|ko|성화|sc=Kore}}
 * Latin: {{t+|la|icon|f}}
 * Latvian: {{t|lv|ikona|f}}
 * Lithuanian: {{t+|lt|ikona|f}}
@@ -158,9 +158,10 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * German: {{t+|de|Icon|n}}
 * Greek: {{t+|el|εικονίδιο|n}}
 * Hungarian: {{t+|hu|ikon}}
-{{trans-mid}}
 * Italian: {{t+|it|icona|f}}
+{{trans-mid}}
 * Japanese: {{t+|ja|アイコン|tr=aikon}}
+* Korean: {{t+|ko|아이콘|sc=Kore}}
 * Norman: {{t|nrf|icône}}
 * Norwegian:
 *: Bokmål: {{t+|nb|ikon|m|n}}
