--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -159,8 +159,8 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Greek: {{t+|el|εικονίδιο|n}}
 * Hungarian: {{t+|hu|ikon}}
 * Italian: {{t+|it|icona|f}}
-{{trans-mid}}
 * Japanese: {{t+|ja|アイコン|tr=aikon}}
+{{trans-mid}}
 * Korean: {{t+|ko|아이콘|sc=Kore}}
 * Norman: {{t|nrf|icône}}
 * Norwegian:
@@ -169,7 +169,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Polish: {{t+|pl|ikona|f}}, {{t|pl|ikonka|f}}
 * Portuguese: {{t+|pt|ícone|m}}
 * Romanian: {{t+|ro|iconiță|f}}
-* Russian: {{t+|ru|ико́нка|f}}
+* Russian: {{t+|ru|ико́нка|f}}, {{t+|ru|пиктогра́мма|f|sc=Cyrl}}, {{t+|ru|значо́к|m|sc=Cyrl}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|икона|f|sc=Cyrl}}, {{t|sh|иконица|f|sc=Cyrl}}
 *: Roman: {{t+|sh|ikona|f}}, {{t|sh|ikonica|f}}
