--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 {{PIE root|en|wemh₁}}
-From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomitāre|lang=la}}, present active infinitive of {{term|vomitō||vomit repeatedly|lang=la}}, frequentative form of {{term|vomō||be sick, vomit|lang=la}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*wemh₁-||to spew, vomit}}. Cognate with {{etyl|non|-}} {{term|váma||nausea, malaise|lang=non}}, {{etyl|ang|-}} {{term|wemman||to defile|lang=ang}}. More at {{l|en|wem}}.
+From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infinitive of {{m|la|vomitō||vomit repeatedly}}, frequentative form of {{m|la|vomō||be sick, vomit}}, from {{der|en|ine-pro|*wemh₁-||to spew, vomit}}. Cognate with {{etyl|non|-}} {{m|non|váma||nausea, malaise}}, {{etyl|ang|-}} {{m|ang|wemman||to defile}}. More at {{m|en|wem}}.
 
 ===Pronunciation===
 * {{a|UK}} {{enPR|vŏm'it}}, {{IPA|/ˈvɒmɪt/|lang=en}}
