--- a/en/傌/傌.11164.wikitext
+++ b/en/傌/傌.11164.wikitext
@@ -3,8 +3,7 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=21227|canj=OSQF|ids=⿰亻馬}}
 
-# to [[curse]], to [[revile]], to [[abuse]]
-# to [[scold]]
+# {{alternative spelling of|罵|lang=zh}}
 # the red '[[knight]]' piece in [[Chinese chess]] (often [[馬]])
 
 ====References====
