--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -204,7 +204,7 @@ Cognate with {{etyl|is|-}} {{m|is|kostur}}, {{etyl|de|-}} dialectal {{m|de|Kust|
 * Catalan: {{t+|ca|costar}}
 * Chechen: {{t-needed|ce}}
 * Chinese:
-*: Mandarin: {{zh-tsp|花費|花费|huāfèi}}
+*: Mandarin: {{t|cmn|花費|sc=Hani}}, {{t|cmn|花费|tr=huāfèi|sc=Hani}}
 * Czech: {{t+|cs|stát}}
 * Danish: {{t|da|koste}}
 * Dutch: {{t+|nl|kosten}}
@@ -266,7 +266,7 @@ Cognate with {{etyl|is|-}} {{m|is|kostur}}, {{etyl|de|-}} dialectal {{m|de|Kust|
 * Zulu: {{t|zu|biza|alt=-biza}}
 {{trans-bottom}}
 {{trans-top|To cause something to be lost}}
-* Chinese: {{t+|cmn|付出了；耗费了；花费了|sc=Hani}}
+* Chinese: {{t+check|cmn|付出了；耗费了；花费了|sc=Hani}}
 * French: {{t+|fr|coûter}}, {{t+|fr|couter}}
 {{trans-bottom}}
 
