--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -21,6 +21,8 @@ Note the stroke order in the right component 旡, which may not be clear in the 
 {{zh-pron
 |m=jì
 |c=gei3
+|h=pfs=ki
+|mn=kì
 |mc=
 |oc=y
 |ma=
@@ -31,12 +33,8 @@ Note the stroke order in the right component 旡, which may not be clear in the 
 # [[already]]
 # [[de facto]]
 # [[since]]
+#: {{zh-usex|耶和華 ^神 對 蛇 說：「^你 既 做 了 這 事，就 必 受 咒詛，比 一切 的 牲畜{chù} 野獸 更甚！你 必 用 肚子{zi} 行走，終身 吃 土。」|And the LORD God said unto the serpent, '''Because''' thou hast done this, thou art cursed above all cattle, and above every beast of the field; upon thy belly shalt thou go, and dust shalt thou eat all the days of thy life|ref=和合本 (Chinese Union Version), 創世記 (Genesis) 3:14}}
 # [[then]]
-
-====Quotations====
-#: 耶和华神对蛇说，你既作了这事，就必受咒诅，比一切的牲畜野兽更甚。你必用肚子行走，终身吃土。
-#: Yēhéhuá shén duì shé shuō , nǐ jì zuò le zhè shì , jiù bì shòu zhòuzǔ , bǐ yīqiè de shēngchù yĕshòu gèng shén . nǐ bì yòng dùzi xíng zǒu , zhōng shēn chī tǔ .
-#:: And the LORD God said unto the serpent, Because thou hast done this, thou art cursed above all cattle, and above every beast of the field; upon thy belly shalt thou go, and dust shalt thou eat all the days of thy life:
 
 ----
 
