--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -561,6 +561,9 @@ From {{inh|ga|sga|port||bank, shore (of river or sea); landing-place, haven; ban
 =====Declension=====
 {{ga-decl-m1|p|ort|oirt}}
 
+=====Derived terms=====
+* {{l|ga|taobhfort|g=m||traverse}}
+
 [[Category:ga:Geography]]
 
 ===Mutation===
