/* Derived terms */ afterplay <play#35945802>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -627,6 +627,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 
 ===Derived terms===
 {{rel-top3|Terms derived from the noun or verb ''play''}}
+* [[afterplay]]
 * [[airplay]]
 * [[all work and no play makes Jack a dull boy]]
 * [[at play]]
@@ -663,8 +664,8 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * [[play dead]]
 * [[play doctor]]
 * [[playdough]]
-* [[play down]]
 {{rel-mid3}}
+* [[play down]]
 * [[play dumb]]
 * [[player]]
 * [[play fair]]
@@ -701,8 +702,8 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * [[play silly buggers]]
 * [[play someone like a fiddle]]
 * [[playsuit]]
-* [[play the angles]]
 {{rel-mid3}}
+* [[play the angles]]
 * [[play the devil]]
 * [[play the field]]
 * [[play the fool]]
