--- a/en/備/備.11180.wikitext
+++ b/en/備/備.11180.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=24227|canj=OTHB|ids=⿰亻𤰇}}
+{{Han char|rn=9|rad=人|as=10|sn=12|four=24227|canj=OTHB|ids=⿰亻𤰇 <small>(GT)</small>,⿰亻⿱卄⿸厂用 <small>(JK)</small>}}
 
 # [[prepare]], [[ready]], [[perfect]]
 
