--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -75,6 +75,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * Maori: {{t|mi|kōmata o te rangi}}
 * Middle English: {{t|enm|cenyth}}
 * Navajo: {{t|nv|yá ʼałníiʼgi}}
+* Persian: {{t+|fa|سمت‌الرأس|tr=samt-or-ra's|sc=fa-Arab}}
 * Polish: {{t+|pl|zenit|m}}, {{t|pl|apogeum|n}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
 * Romanian: {{t+|ro|dric|m}}
@@ -123,6 +124,7 @@ From {{inh|en|enm|cenyth}}, from {{der|en|ML.|cenit}}, a transliteration of {{de
 * Italian: {{t+|it|zenit|m}}, {{t+|it|culmine|m}}, {{t+|it|apice|m}}
 * Japanese: {{t|ja|頂点|tr=ちょうてん, chōten}}, {{t|ja|絶頂|tr=ぜっちょう, zecchō}}
 {{trans-mid}}
+* Persian: {{t+|fa|اوج|tr=owj|sc=fa-Arab}}
 * Portuguese: {{t+|pt|topo|m}}, {{t+|pt|cume|m}}
 * Russian: {{t+|ru|зени́т|m}}, {{t+|ru|расцве́т|m}}, {{t|ru|вы́сшая то́чка|f}}
 * Scottish Gaelic: {{t|gd|bàrr|m}}
