--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -3,6 +3,8 @@
 ===Etymology===
 {{Han compound|音|心|t2=heart|ls=ic}}
 
+Unrelated to [[音]].
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=00336|canj=YTAP|ids=⿱音心}}
 
