--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -15,12 +15,29 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=wong6|y=wong6}}
+===Alternative forms===
+* {{zh-l|暀}}
 
-# {{defn|lang=yue|sort=日04}}
+===Pronunciation===
+{{zh-pron
+|m=wàng
+|c=wong6
+|h=pfs=vong
+|md=
+|mn=ōng
+|w=
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -42,15 +59,6 @@
 {{ko-hanja|hangeul=왕|eumhun=|rv=wang|mr=wang|y=wang}}
 
 # {{defn|lang=ko|sort=日04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[wàng]] ([[wang4]])|wg=wang<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
 
 ----
 
