--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -653,7 +653,8 @@ From {{der|ang|la|portus}}.
 ===Noun===
 {{ang-noun|m}}
 
-# {{l|en|port}} {{gloss|for watercraft}}
+# {{l|en|portal}}: a [[door]] or [[gate]].
+# {{l|en|port}}: a [[harbor]] or [[harbor]]-[[town]], {{context|particularly}} with [[special]] [[trading]] [[privilege]]s.
 
 ====Derived terms====
 * {{l|ang|port-ġerēfa}}
