Korean definitions enriched <惼#35972240>

--- a/en/惼/惼.15632.wikitext
+++ b/en/惼/惼.15632.wikitext
@@ -44,7 +44,7 @@
 ===Hanja===
 {{ko-hanja|hangeul=편|eumhun=|rv=pyeon|mr=p'yŏn|y=phyen}}
 
-# {{defn|lang=ko|sort=心09}}
+# [[narrow-minded]]
 
 ----
 
