--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -17,6 +17,7 @@
 {{trans-top|country in Central Europe}}
 * Afrikaans: {{t|af|Tsjeggiese Republiek}}, {{t|af|Tsjeggië}}
 * Arabic: {{t|ar|جُمْهُورِيَّة اَلتّْشِيك|f|tr=jumhūriyyat at-tšik}}, {{t|ar|اَلتّْشِيك|m}}, {{t|ar|اَلتّْشِيك|m|tr=at-tšek}}
+*: Hijazi Arabic: {{t|acw|التشيك|tr=at-tšīk|sc=Arab}}
 * Armenian: {{t|hy|Չեխիայի Հանրապետություն}}, {{t|hy|Չեխիա}}
 * Azeri: {{t|az|Çex Respublikası}}, {{t+|az|Çexiya}}
 * Bashkir: {{t|ba|Чехия|sc=Cyrl}}
