Updating [[Template:context|context]] with lang. <feel#35977626>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -406,7 +406,7 @@ From {{etyl|enm|en}} {{term|feele|lang=enm}}, {{term|fele|lang=enm}}, {{term|feo
 ====Pronoun====
 {{en-pron}}
 
-# {{context|dialectal|or|obsolete}} {{alternative form of|fele|lang=en}}
+# {{context|dialectal|or|obsolete|lang=en}} {{alternative form of|fele|lang=en}}
 
 ====Adjective====
 {{en-adj|-}}
