--- a/en/坭/坭.13040.wikitext
+++ b/en/坭/坭.13040.wikitext
@@ -59,10 +59,17 @@
 ===Han character===
 {{vi-hantu|[[nơi]], [[nai]], [[nê]]|rs=土05}}
 
-# {{defn|lang=vi|sort=土05}}
+# [[place]], [[location]], [[site]]
+
+====Compounds====
+* {{l|vi|泣坭|tr=[[khắp nơi]]}}
+* {{l|vi|𦣰坭|tr=[[nằm nơi]]}}
+
+====Usage notes====
+* Chữ Nôm. The modern Vietnamese equivalent is [[nơi]].
 
 ====References====
-* [http://nomfoundation.org/common/nom_details.php?codepoint=576d Nom Foundation]
+* [http://www.chunom.org/pages/坭 www.chunom.org]
 
 [[fr:坭]]
 [[ko:坭]]
