/* Derived terms */ +2 <count#35980112>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -190,7 +190,9 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * [[countless]]
 {{rel-mid3}}
 * [[down for the count]]
+* [[hard count]]
 {{rel-mid3}}
+* [[soft count]]
 * [[sperm count]]
 {{rel-bottom}}
 
