--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -3,7 +3,7 @@
 [[Image:Aldabra.giant.tortoise.arp.jpg|thumb|A tortoise]]
 
 ===Etymology===
-{{etyl|enm|en}} {{term|tortuse|lang=enm}}, {{term|tortuce|lang=enm}}, {{term|tortuge|lang=enm}}, from {{etyl|ML.|en}} {{term|tortuca|lang=la}}, possibly from {{etyl|LL.|en}} {{term|tartarūcha|lang=la}}, from {{etyl|LL.|en}} {{term|tartarūchus||of Tartarus|lang=la}}, from {{etyl|grc|en}} {{term|ταρταροῦχος||lang=grc|from Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld; or from {{etyl|la|en}} {{term|tortus||lang=la|twisted}}.
+From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, from {{etyl|ML.|en}} {{term|tortuca|lang=la}}, of uncertain origin. Possibly from {{etyl|LL.|en}} {{term|tartarūcha|lang=la}}, from {{etyl|LL.|en}} {{term|tartarūchus||of Tartarus|lang=la}}, from {{etyl|grc|en}} {{term|ταρταροῦχος||lang=grc|from Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld; or from {{etyl|la|en}} {{term|tortus||lang=la|twisted}}.
 
 ===Pronunciation===
 * {{IPA|/ˈtɔː(ɹ)təs/|lang=en}}
