--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -18,94 +18,124 @@
 
 ====Translations====
 {{trans-top|country in Central Europe}}
+* Abkhaz: {{t|ab|Чехиа|sc=Cyrl}}
 * Afrikaans: {{t|af|Tsjeggiese Republiek}}, {{t|af|Tsjeggië}}
-* Arabic: {{t|ar|جُمْهُورِيَّة اَلتّْشِيك|f|tr=jumhūriyyat at-tšik}}, {{t|ar|اَلتّْشِيك|m}}, {{t|ar|اَلتّْشِيك|m|tr=at-tšek}}
+* Albanian: {{t|sq|Çeke|f}}
+* Amharic: {{t|am|ቼክ|sc=Ethi}}
+* Arabic: {{t|ar|جُمْهُورِيَّة اَلتّْشِيك|f|tr=jumhūriyyat at-tšīk}}, {{t|ar|اَلتّْشِيك|m}}, {{t|ar|اَلتّْشِيك|m|tr=at-tšīk}}
 *: Hijazi Arabic: {{t|acw|التشيك|tr=at-tšīk|sc=Arab}}
 * Armenian: {{t|hy|Չեխիայի Հանրապետություն}}, {{t|hy|Չեխիա}}
+* Asturian: {{t+|ast|Chequia|f}}
 * Azeri: {{t|az|Çex Respublikası}}, {{t+|az|Çexiya}}
 * Bashkir: {{t|ba|Чехия|sc=Cyrl}}
+* Bavarian: {{t|bar|Tschechei}}
 * Belarusian: {{t|be|Чэ́шская рэспу́бліка|f}}, {{t|be|Чэ́хія|f}}
 * Bengali: {{t|bn|চেক প্রজাতন্ত্র|tr=cek prôjatôntrô|sc=Beng}}
-* Breton: {{t|br|Republik Tchek}}
+* Breton: {{t|br|Republik Tchek}}, {{t|br|Tchekia}}
 * Bulgarian: {{t|bg|Че́шка репу́блика|f}}, {{t+|bg|Че́хия|f}}
-* Burmese: {{t|my|ချက်သမ္မတနိုင်ငံ|sc=Mymr}}
-* Catalan: {{t|ca|República Txeca|f}}
+* Burmese: {{t|my|ချက်သမ္မတနိုင်ငံ|sc=Mymr}}, {{t|my|ချက်|sc=Mymr}}
+* Catalan: {{t|ca|República Txeca|f}}, {{t+|ca|Txèquia|f}}
+* Chechen: {{t|ce|Чехи}}
 * Chinese:
 *: Mandarin: {{t+|cmn|捷克共和國|sc=Hani}}, {{t|cmn|捷克共和国|tr=Jiékè gònghéguó|sc=Hani}}, {{t+|cmn|捷克|tr=Jiékè|sc=Hani}}
 * Chuvash: {{t|cv|Чех Республики|sc=Cyrl}}
-* Crimean Tatar: {{t|crh|Çeh Cumhuriyeti}}
+* Crimean Tatar: {{t|crh|Çeh Cumhuriyeti}}, {{t|crh|Çehiya}}
 * Czech: {{t+|cs|Česká republika|f}}, {{t+|cs|Česko|n}}
 * Danish: {{t|da|Den Tjekkiske Republik}}, {{t+|da|Tjekkiet}}
+* Dhivehi: {{t|dv|ޗެކް|sc=Thaa}}
 * Dutch: {{t+|nl|Tsjechische Republiek}}, {{t+|nl|Tsjechië|n}}
-* Esperanto: {{t|eo|Ĉeĥa Respubliko}}
+* Esperanto: {{t|eo|Ĉeĥa Respubliko}}, {{t|eo|Ĉeĥio}}
 * Estonian: {{t|et|Tšehhi Vabariik}}, {{t+|et|Tšehhi}}, rarely {{t|et|Tšehhimaa}}
-* Faroese: {{t|fo|Kekska lýðveldið|n}}
-* Finnish: {{t+|fi|Tšekin tasavalta}}
+* Faroese: {{t|fo|Kekska lýðveldið|n}}, {{t|fo|Kekkia|n}}
+* Finnish: {{t+|fi|Tšekin tasavalta}}, {{t+|fi|Tšekki}}, rarely {{t|fi|Tšekinmaa}}
 * French: {{t+|fr|République tchèque|f}}, {{t+|fr|Tchéquie|f}}
+* Frisian:
+*: West Frisian: {{t|fy|Tsjechje}}
+* Georgian: {{t|ka|ჩეხეთი|sc=Geor}}
 * German: {{t+|de|Tschechische Republik|f}}, {{t+|de|Tschechien|n}}, rarely {{t+|de|Tschechei|f}}
 * Greek: {{t|el|Δημοκρατία της Τσεχίας|f}}, {{t+|el|Τσεχία|f}}
+*: Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}, {{t|pnt|Τσεχία}}
 * Haitian Creole: {{t|ht|Repiblik Tcheki}}
-* Hebrew: {{t|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit}}
-* Hindi: {{t|hi|चेक रिपब्लिक|tr=cek ripablik|sc=Deva}}
-* Hungarian: {{t+|hu|Cseh Köztársaság}}
+* Hebrew: {{t|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit}}, {{t|he|צ'כיה|f|tr=chekhia|sc=Hebr}}
+* Hindi: {{t|hi|चेक रिपब्लिक}}, {{t+|hi|चेक}}
+* Hungarian: {{t+|hu|Cseh Köztársaság}}, {{t+|hu|Csehország}}
 * Icelandic: {{t|is|Tékkneska lýðveldið|n}}, {{t+|is|Tékkland|n}}
 * Ido: {{t+|io|Chekia}}
+* Indonesian: {{t|id|Ceko}}
 * Interlingua: {{t|ia|Republica Chec}}
-* Irish: {{t|ga|Poblacht na Seice|f}}, {{t|ga|Seic|f|alt=an tSeic}}
-* Italian: {{t+|it|Repubblica Ceca|f}}
+* Irish: {{t|ga|Poblacht na Seice|f}}, {{t|ga|an t[[Seic]]|f}}
+* Italian: {{t+|it|Repubblica Ceca|f}}, {{t+|it|Cechia|f}}
 * Japanese: {{t|ja|チェコ共和国|tr=ちぇこきょうわこく, Cheko kyōwakoku}}, {{t+|ja|チェコ|tr=Cheko}}
+* Kabardian: {{t|kbd|Чехиэ}}
+* Kannada: {{t+|kn|ಜೆಕ್|sc=Knda}}
+* Karakalpak: {{t|kaa|Shexiya}}
 * Kazakh: {{t|kk|Чех Республикасы|sc=Cyrl}}, {{t|kk|Чехия|sc=Cyrl}}
-* Khmer: {{t|km|សាធារណរដ្ឋឆែក|tr=sar thea rak nak roath chaek|sc=Khmr}}
+* Khmer: {{t|km|សាធារណរដ្ឋឆែក}}, {{t+|km|ឆែក}}
+* Komi-Permyak: {{t|koi|Ческо}}
 * Korean: {{t|ko|^체코 공화국|sc=Hang}}, {{t|ko|^체코|sc=Hang}}
 * Kurdish: {{t|ku|Komara Çêkiyayê}}
 * Kyrgyz: {{t|ky|Чех Республикасы|sc=Cyrl}}, {{t|ky|Чехия|sc=Cyrl}}
 * Lao: {{t|lo|ສາທາລະນະລັດແຊັກ|sc=Laoo}}, {{t|lo|ເຊັກກີ|sc=Laoo}}
+* Latin: {{t|la|Respublica Cecha|f}}, {{t|la|Cechia|f}}, {{t|la|Czechia|f}}, {{t|la|Tzechia|f}}
 {{trans-mid}}
-* Latin: {{t|la|Respublica Cecha|f}}
 * Latvian: {{t|lv|Čehijas Republika|f}}, {{t+|lv|Čehija|f}}
 * Lithuanian: {{t+|lt|Čekijos Respublika|f}}, {{t+|lt|Čekija|f}}
-* Luxembourgish: {{t+|lb|Tschechesch Republik}}
+* Luxembourgish: {{t+|lb|Tschechesch Republik}}, {{t+|lb|d'[[Tschechei]]|f}}
 * Macedonian: {{t|mk|Че́шка Репу́блика|f|sc=Cyrl}}, {{t+|mk|Че́шка|f|sc=Cyrl}}, rarely {{t|mk|Че́хија|f|sc=Cyrl}}
-* Malay: {{t|ms|Republik Czech}}
-* Maltese: {{t|mt|Repubblika Ċeka|alt=ir-Repubblika Ċeka}}
+* Malay: {{t|ms|Republik Czech}}, {{t|ms|Czech}}
+* Malayalam: {{t|ml|ചെക്ക്‌|sc=Mlym}}
+* Maltese: {{t|mt|ir-[[Repubblika Ċeka]]}}, {{t|mt|Ċekja|f}}
+* Marathi: {{t|mr|चेक|tr=cek|sc=Deva}}
 * Navajo: {{t|nv|Chek bikéyah}}
-* Norman: {{l|nrf|Républyique Tchèque|f}} {{qualifier|Jersey}}
+* Norman: {{t|nrf|Républyique Tchèque|f}} {{qualifier|Jersey}}
+* Northern Sami: {{t|se|Čeahkka}}
 * Norwegian: {{t|no|Den tsjekkiske republikk}}, {{t+|no|Tsjekkia}}
-* Occitan: {{t+|oc|Republica Chèca|f}}
+* Occitan: {{t+|oc|Republica Chèca|f}}, {{t+|oc|Chequia|f}}
+* Ossetian: {{t|os|Чехи|sc=Cyrl}}
 * Persian: {{t+|fa|جمهوری چک|tr=jomhuri-ye ček|sc=fa-Arab}}, {{t+|fa|چک|tr=ček|sc=fa-Arab}}
 * Polish: {{t+|pl|Republika Czeska|f}}, {{t+|pl|Czechy|p}}
-* Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}
 * Portuguese: {{t+|pt|República Tcheca}}, {{t+|pt|Chéquia|f}}, {{t+|pt|Tchéquia|f}}
 * Quechua: {{t|qu|Chiksuyu}}
-* Romanian: {{t+|ro|Republica Cehă|f}}
-* Romansch: {{t|rm|Republica Tscheca|f}}
+* Romanian: {{t+|ro|Republica Cehă|f}}, {{t+|ro|Cehia|f}}
+* Romansch: {{t|rm|Republica Tscheca|f}}, {{t|rm|Tschechia|f}}
 * Russian: {{t|ru|Че́шская Респу́блика|f}}, {{t+|ru|Че́хия|f}}
-* Scottish Gaelic: an t-{{t|gd|Seic|f}}
+* Rusyn: {{t|rue|Че́сько|n|sc=Cyrl}}
+* Scottish Gaelic: {{t|gd|an t-[[Seic]]|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Чешка Република|f|sc=Cyrl}}, {{t|sh|Чешка|f|sc=Cyrl}}
-*: Roman: {{t|sh|Češka Republika|f}}, {{t+|sh|Češka|f}}
+*: Latin: {{t|sh|Češka Republika|f}}, {{t+|sh|Češka|f}}
 * Sicilian: {{t|scn|Ripùbblica Ceca|f}}
-* Silesian: {{t|szl|Czesko Republika|f}}, {{qualifier|colloquial}}
+* Silesian: {{t|szl|Czesko Republika|f}}, {{t|szl|Czesko|n}}
 * Sinhalese: {{t|si|චෙක් ජනරජය|sc=Sinh}}, {{t|si|චෙක්|sc=Sinh}}
 * Slovak: {{t|sk|Česká republika|f}}, {{t+|sk|Česko|n}}
 * Slovene: {{t|sl|Čéška Repúblika|f}}, {{t+|sl|Čéška|f}}
-* Spanish: {{t+|es|República Checa|f}}
-* Swahili: {{t|sw|Jamhuri ya Ucheki}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|Česka|f}}
+*: Upper Sorbian: {{t|hsb|Čěska|f}}
+* Spanish: {{t+|es|República Checa|f}}, {{t+|es|Chequia|f}}
+* Swahili: {{t|sw|Jamhuri ya Ucheki}}, {{t|sw|Ucheki}}
 * Swedish: {{t|sv|Tjeckiska republiken}}, {{t+|sv|Tjeckien}}
 * Tagalog: {{t+|tl|Republikang Tseko}}
 * Tajik: {{t|tg|Чех Ҷумҳурии|sc=Cyrl}}, {{t|tg|Чехия|sc=Cyrl}}
+* Tamil: {{t|ta|செக்|sc=Taml}}
 * Tatar: {{t|tt|Чехия Җөмһүрият|sc=Cyrl}}, {{t|tt|Чехия|sc=Cyrl}}
-* Thai: {{t+|th|สาธารณรัฐเช็ก|tr=săa-taa-rá-ná-rát chék|sc=Thai}}
+* Telugu: {{t|te|చెక్|sc=Telu}}
+* Thai: {{t+|th|สาธารณรัฐเช็ก|tr=săa-taa-rá-ná-rát chék|sc=Thai}}, {{t+|th|เช็ก|tr=chék|sc=Thai}}
+* Tibetan: {{t|bo|ཅེ་ཁེ།|sc=Tibt}}
 * Turkish: {{t+|tr|Çek Cumhuriyeti}}, {{t+|tr|Çekya}}
 * Turkmen: {{t|tk|Çeh Republikasy}}, {{t|tk|Çehiýa}}
+* Udmurt: {{t|udm|Чехия|sc=Cyrl}}
 * Ukrainian: {{t|uk|Че́ська Респу́бліка|f}}, {{t+|uk|Че́хія|f}}
-* Uyghur: {{t|ug|چېخ جۇمھۇرىيەتى|sc=ug-Arab}}
+* Urdu: {{t|ur|چیک|tr=cek|sc=ur-Arab}}
+* Uyghur: {{t|ug|چېخ جۇمھۇرىيەتى|sc=ug-Arab}}, {{t|ug|چېخ|sc=ug-Arab}}
 * Uzbek: {{t|uz|Chex Respublikasi}}, {{t+|uz|Chexiya}}
-* Vietnamese: {{t|vi|Cộng hòa Séc}}
-* Võro: {{t|vro|Tsehhi Vabariik'}}
+* Vietnamese: {{t|vi|Cộng hòa Séc}}, {{t|vi|Séc}}
+* Võro: {{t|vro|Tsehhi Vabariik'}}, {{t|vro|Tsehhi}}
 * Welsh: {{t+|cy|Gweriniaeth Tsiec|alt=Y Weriniaeth Tsiec}}
-* Yakut: {{t|sah|Чех Республиката|sc=Cyrl}}
+* Yakut: {{t|sah|Чех Республиката|sc=Cyrl}}, {{t|sah|Чехия|sc=Cyrl}}
 * Yiddish: {{t|yi|טשעכישע רעפּובליק|f}}, {{t|yi|טשעכײַ|f}}
+* Zazaki: {{qualifier|Southern Zazaki}} {{t|zza|Çekıstan}}
+* Zulu: {{t|zu|ITsheki}}
 {{trans-bottom}}
 
 ====See also====
