Reverted edits by [[Special:Contributions/184.185.137.179|184.185.137.179]]. If you think this rollback is in error, please leave a message on my talk page. <pull#36023675>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -123,7 +123,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 ====Translations====
 {{trans-top|transitive: apply force to (something) so it comes towards one}}
 * Arabic: {{t|ar|جَرَّ}}, {{t|ar|سَحَبَ}}
-*: Egyptian Arabic: {{t|arz|جر|tr=shadd|sc=Arab}}, {{t|arz|سحب|tr=saḥab|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|جر|tr=garr|sc=Arab}}, {{t|arz|جرجر|tr=gargar|sc=Arab}}, {{t|arz|سحب|tr=saḥab|sc=Arab}}
 *: Moroccan Arabic: {{t|ary|جر|tr=jerr}}, {{t|ary|جبد|tr=jbed}}
 * Armenian: {{t+|hy|քաշել}}, {{t+|hy|ձգել}}
 * Azeri: {{t+|az|çəkmək}}
