t+rup:[[tãljiturã]] ([[WT:EDIT|Assisted]]) <cut#36025352>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -193,6 +193,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 
 ====Translations====
 {{trans-top|opening resulting from cutting}}
+* Aromanian: {{t|rup|tãljiturã|f}}
 * Bulgarian: {{t+|bg|разрез|m}}
 * Danish: {{t|da|snitsår|n}}, {{t|da|skramme|c}}
 * Dutch: {{t+|nl|snee}}
