--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -137,7 +137,8 @@
 ===Han character===
 {{vi-hantu|thuỳ|rs=土05}}
 
-# {{defn|lang=vi|sort=土05}}
+# to hang, to fall, to follow
+# adjacent to
 
 [[fr:垂]]
 [[ko:垂]]
