--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -302,7 +302,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 {{en-noun|-}}
 
 # [[language]], [[jargon]], or [[terminology]] used uniquely in a particular environment or group.
-#: '' '''Corporate speak'''; IT '''speak''' ''
+#: '' Corporate '''speak'''; IT '''speak''' ''
 
 ====Derived terms====
 {{rel-top3|Terms derived from ''speak'' (noun)}}
