t+lzz:[[ხინჯი]] t+xmf:[[ხინჯი]] t+stq:[[Brääch]] ([[WT:EDIT|Assisted]]) <bridge#36057110>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -168,6 +168,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Latgalian: {{t|ltg|tylts}}
 * Latin: {{t+|la|pons|m}}
 * Latvian: {{t+|lv|tilts|m}}
+* Laz: {{t|lzz|ხინჯი}}
 * Lingala: {{t|ln|gwagwa}}, {{t|ln|gbagba}}
 * Lithuanian: {{t+|lt|tiltas|m}}
 * Luganda: {{t|lg|olutindo}}
@@ -182,6 +183,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Maltese: {{t|mt|pont|m}}
 * Maori: {{t|mi|piriti}}, {{t|mi|arawhata}}
 * Marathi: {{t|mr|सेतु|tr=setu|sc=Deva}}
+* Mingrelian: {{t|xmf|ხინჯი}}
 * Mirandese: {{t|mwl|puonte}}
 * Moksha: {{t|mdf|седь}}
 * Mongolian: {{t|mn|гүүр тавих|sc=Cyrl}}, {{t+|mn|гүүр|sc=Cyrl}}
@@ -212,6 +214,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Samoan: {{t|sm|faiā}}, {{t|sm|alaniu}}
 * Sanskrit: {{t|sa|सेतु|tr=setu|sc=Deva}}
 * Sardinian: {{t|sc|ponte}}, {{t|sc|ponti}}
+* Saterland Frisian: {{t|stq|Brääch|f}}
 * Scottish Gaelic: {{t|gd|drochaid|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|мо̑ст|m|sc=Cyrl}}, {{t|sh|ћу̀прија|f|sc=Cyrl}} {{qualifier|archaic, poetic}}
