/* Derived terms */ <brick#36095359>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -39,7 +39,9 @@
 * [[bricks and mortar]]
 * [[bricks and clicks]]
 * [[brick shithouse]]
+* {{l|en|brickwork}}
 {{rel-mid3}}
+* {{l|en|brickworks}}
 * [[drop a brick]]
 * [[hit the bricks]]
 * [[like a cat on a hot brick]]
