--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -243,6 +243,7 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * Kalmyk: {{t|xal|гесн}}
 * Kazakh: {{t|kk|қарын|tr=qarın|sc=Cyrl}}
 * Khmer: {{t|km|ក្បាលពោះ|tr=kbaal pʊəh|sc=Khmr}}
+* Kikuyu: {{t|ki|nda}}
 * Korean: {{t+|ko|배|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|زگ|tr=zig|sc=ku-Arab}}, {{t+|ku|ورگ|tr=wirg|sc=ku-Arab}}
