t+eo:[[konkurso]] ([[WT:EDIT|Assisted]]) <fight#36141742>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -448,7 +448,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Czech: {{t+|cs|zápas}}
 * Danish: {{t+|da|kamp}}
 * Dutch: {{t+|nl|gevecht|n}}
-* Esperanto: {{t-needed|eo}}
+* Esperanto: {{t|eo|konkurso}}
 * Finnish: {{t+|fi|kamppailu}}, ([[ottelu]])
 * French: {{t+|fr|combat|m}}
 * Hebrew: {{t+|he|קרב|m|tr=kráv}}
