--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -63,6 +63,7 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 * Scottish Gaelic: {{t|gd|bàn}}, [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{g|m}}, [[bean#Scottish Gaelic|bean]] bhàn {{g|f}}
 * Spanish: {{t+|es|rubio|m}}, [[canche]] {{g|m}} {{qualifier|Guatemala}}, [[catire]] {{g|m}} {{qualifier|Venezuela}}, [[chele]] {{g|m}} {{qualifier|El Salvador|Honduras|Nicaragua}}, [[choco]] {{g|m}} {{qualifier|Bolivia}}, [[fulo]] {{g|m}} {{qualifier|Panama}}, [[gringo]] {{g|m}} {{qualifier|Peru}}, [[güero]] {{g|m}} {{qualifier|Mexico}}, [[macho]] {{g|m}} {{qualifier|Costa Rica}}, [[mono]] {{g|m}} {{qualifier|Colombia}}, [[rucio]] {{g|m}} {{qualifier|Chile}}, [[suco]] {{g|m}} {{qualifier|Ecuador}}
 * Swedish: {{t+|sv|blondin|c}}
+* Tagalog: {{t|tl|rubyo}}, {{t|tl|rubya}}
 * Turkish: {{t+|tr|sarışın}}
 * Vietnamese: {{t|vi|tóc vàng hoe}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|blonan}}, {{qualifier|♂}} {{t|vo|hiblonan}}, {{qualifier|♀}} {{t+|vo|jiblonan}}
@@ -138,6 +139,7 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 * Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
 * Russian: {{t+|ru|бе́лый}}
 * Swedish: {{t+|sv|ljus}}, {{t+|sv|ljushyad}}, blond
+* Tagalog: {{t|tl|rubyo}}
 * Volapük: {{t+|vo|blonik}}, {{qualifier|obsolete}} {{t|vo|blönik}}
 {{trans-bottom}}
 
