--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -81,8 +81,8 @@
 * Kurdish:
 *: Sorani: {{t|ku|دەولەتێن یەکبوویییێن ئەمەریکایێ|tr=Dewletên Yekbûyîyên Emerîkayê|sc=ku-Arab}}
 * Kyrgyz: {{t|ky|Америка Кошмо Штаттары|sc=Cyrl}}
-{{trans-mid}}
 * Lakota: {{t|lkt|Mílahaŋska Tȟamákȟočhe}}
+{{trans-mid}}
 * Lao: {{t|lo|ສະຫະລັດອະເມລິກາ|sc=Laoo}}
 * Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
 * Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
@@ -125,7 +125,7 @@
 * Spanish: {{t+|es|Estados Unidos de América|m-p}}, {{t+|es|Estados Unidos|m-p}}, {{t+|es|EE. UU.|m-p}}, {{t+|es|EEUU|m-p}}
 * Swahili: {{t|sw|Muungano wa Madola ya Amerika}}
 * Swedish: {{t+|sv|Amerikas förenta stater}}, {{t+|sv|Förenta staterna}}
-* Tagalog: {{t|tl|Estados Unidos ng Amerika}}
+* Tagalog: {{t|tl|Estados Unidos ng Amerika}}, {{t|tl|Nangagkakaisang Banwa ng Amerika}}
 * Tajik: {{t|tg|Иёлоти Муттаҳидаи Амриқо|sc=Cyrl}}
 * Tamil: {{t+|ta|அமெரிக்க ஐக்கிய நாடு|sc=Taml}}
 * Tatar: {{t|tt|Америка Кушма Штатлары|sc=Cyrl}}
