--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -79,7 +79,7 @@ From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{et
 * Khmer: {{t|km|អាវធំ}}
 * Korean: {{t+|ko|코트}}
 {{trans-mid}}
-* Latgalian: {{t|ltg|svuorks}}, {{t|ltg| kuļuks}}, {{t|ltg|biņdzjuks}}
+* Latgalian: {{t|ltg|svuorks}}, {{t|ltg| kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
 * Latin: {{t|la|pallium|n}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Luhya: {{t|luy|kumuchosi}}
