--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -340,6 +340,8 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * German: {{t+|de|fangen}}
 * Italian: {{t+|it|agguantare}}, {{t+|it|acchiappare}}, {{t+|it|afferrare}}, {{t|it|chiappare}}
 * Japanese: {{t|ja|捕らえる|tr=とらえる, toraeru|sc=Jpan}}, {{t|ja|捕まえる|tr=つかまえる, tsukamaeru|sc=Jpan}}
+* Latgalian: {{t|ltg|giut}}, {{t|ltg|giusteit}}, {{t|ltg|čupt}}, {{t|ltg|tvert}}
+* Latvian: {{t|lv|ķert}}, {{t|lv|tvert}}
 * Lombard: {{t|lmo|ciapà}}
 * Maore Comorian: {{t|swb|para|alt=upara}}
 * Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
