/* English */ Stress <cost#36191848>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Pronunciation===
-* {{a|RP}} {{IPA|/kɒst/|lang=en}}
-* {{a|GenAm}} {{IPA|/kɔst/|lang=en}}
-* {{a|cot-caught|Canada}} {{IPA|/kɑst/|lang=en}}
+* {{a|RP}} {{IPA|/ˈkɒst/|lang=en}}
+* {{a|GenAm}} {{IPA|/ˈkɔst/|lang=en}}
+* {{a|cot-caught|Canada}} {{IPA|/ˈkɑst/|lang=en}}
 * {{audio|en-us-cost.ogg|Audio (US)|lang=en}}
 * {{audio|En-uk-to cost.ogg|Audio (UK)|lang=en}}
 * {{rhymes|ɒst|lang=en}}
