--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -137,7 +137,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 *: Sorani: {{t|ckb|دیتنه‌وه‌|sc=ku-Arab}}, {{t|ckb|دۆزینه‌وه‌|sc=ku-Arab}}
 * Kyrgyz: {{t+|ky|табуу|sc=Cyrl}}
 * Lao: {{t|lo|ບອກ|sc=Laoo}}
-* Latgalian: {{t|ltg|atrast}}, {{t|ltg|rast}}
+* Latgalian: {{t|ltg|atrast}}, {{t|ltg|rast}}, {{t|ltg|savaicuot}}
 * Latin: {{t|la|invenīre}}, {{t|la|nanciscor}}, {{t|la|reperio}}
 * Latvian: {{t|lv|atrast}}, {{t|lv|rast}}
 * Lithuanian: {{t|lt|surasti}}
