--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -13,7 +13,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 ===Verb===
 {{en-verb}}
 
-# {{context|transitive|intransitive|lang=en}} to apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force
+# {{context|transitive|intransitive|lang=en}} To apply a [[force]] to (an object) so that it comes [[toward]] the person or thing applying the force.
 #: ''When I give the signal, '''pull''' the rope.''
 #: ''You're going to have to '''pull''' harder to get that cork out of the bottle.''
 #* Bible, Genesis viii. 9
@@ -28,20 +28,20 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 # To draw apart; to tear; to rend.
 #* Bible, Lam. iii. 11
 #*: He hath turned aside my ways, and '''pulled''' me in pieces; he hath made me desolate.
-# {{context|ambitransitive|UK|Ireland|slang|lang=en}} to persuade (someone) to have sex with one<!-- or to be 'on the pull' (willing to have sex)-->
+# {{context|ambitransitive|UK|Ireland|slang|lang=en}} To persuade (someone) to have sex with one.<!-- or to be 'on the pull' (willing to have sex)-->
 #: ''I '''pulled''' at the club last night.''
 #: ''He's pulled that bird over there.''
-# {{context|transitive|lang=en}} to [[remove]] (something), especially from public [[circulation]] or [[availability]]
+# {{context|transitive|lang=en}} To [[remove]] (something), especially from public [[circulation]] or [[availability]].
 #: ''Each day, they '''pulled''' the old bread and set out fresh loaves.''
-# {{context|transitive|informal|lang=en}} to [[do]] or [[perform]]
+# {{context|transitive|informal|lang=en}} To [[do]] or [[perform]].
 #: ''He regularly '''pulls''' 12-hour days, sometimes 14.''
 #: ''You'll be sent home if you '''pull''' another stunt like that.''
-# {{context|transitive|lang=en}} to [[retrieve]] or [[generate]] for use
+# {{context|transitive|lang=en}} To [[retrieve]] or [[generate]] for use.
 #: ''I'll have to '''pull''' a part number for that.''
 #* '''2006''', Michael Bellomo, Joel Elad, ''How to Sell Anything on Amazon...and Make a Fortune!''
 #*: They'll go through their computer system and '''pull''' a report of all your order fulfillment records for the time period you specify.
-# to toss a [[frisbee]] with the intention of launching the disc across the length of a field
-# {{context|intransitive|lang=en}} to [[row]]
+# To toss a [[frisbee]] with the intention of launching the disc across the length of a field.
+# {{context|intransitive|lang=en}} To [[row]].
 #* '''1874''', {{w|Marcus Clarke}}, {{w|For the Term of His Natural Life}} Chapter VI
 #*: It had been a sort of race hitherto, and the rowers, with set teeth and compressed lips, had '''pulled''' stroke for stroke.
 # {{context|transitive|lang=en}} To [[strain]] (a [[muscle]], [[tendon]], [[ligament]], etc.).
@@ -56,7 +56,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 #*: You could also set a fire trap, '''pull''' the mob toward it, then send in your pet….
 #* '''2008''' August 18, "Mark (newsgroups)" (username), "[http://groups.google.com/group/alt.games.warcraft/msg/72486e99a34604b5 Re: I'm a priest now!]", in <tt>alt.games.warcraft</tt>, Usenet:
 #*: Shield yourself, '''pull''' with Mind Blast if you want, or merely '''pull''' with SW:P to save mana, then wand, fear if you need to, but use the lowest rank fear.
-# to [[score]] a certain amount of points in a sport.
+# To [[score]] a certain amount of points in a sport.
 #* ''How many points did you '''pull''' today, Albert?''
 # {{context|horse-racing|lang=en}} To hold back, and so prevent from winning.
 #: ''The favourite was '''pulled'''.''
