--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -273,6 +273,7 @@ Compare {{etyl|ae|-}} {{term|𐬌𐬭𐬌𐬏𐬙||lang=ae|tr=tūiri|curdled mil
 * Occitan: {{t+|oc|burre|m}}, {{t+|oc|bodre|m}}
 * Old Church Slavonic: {{t|cu|масло|n|sc=Cyrs}}
 * Old English: {{t|ang|butere|f}}
+* Ossetian: {{t|os|нæлхæ}}
 * Ottoman Turkish: {{t|ota|تره‌یاغی|tr=tereyağı|sc=ota-Arab}}
 * Persian: {{t+|fa|کره|tr=kare}}, {{t+|fa|مسکه|tr=maske|sc=fa-Arab}}
 * Polish: {{t+|pl|masło|n}}
