t+tl:[[kilo]] t-balance t+tl:[[guhit na kilo]] ([[WT:EDIT|Assisted]]) <curve#36208790>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -105,10 +105,11 @@ From {{etyl|la|en}} {{term|curvus||lang=la|bent, curved}}
 * German: {{t+|de|Kurve|f}}
 * Maori: {{t|mi|ānau}}
 * Navajo: {{t|nv|ahééʼídzoh}}
-{{trans-mid}}
 * Persian: {{t+|fa|منحنی|tr=monhani|sc=fa-Arab}}
+{{trans-mid}}
 * Portuguese: {{t+|pt|curva|f}}
 * Romanian: {{t+|ro|curbă|f}}
+* Tagalog: {{t|tl|kilo}}, {{t|tl|guhit na kilo}}
 {{trans-bottom}}
 
 {{trans-top|geometry: one-dimensional figure}}
