--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -183,6 +183,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * German: {{t+|de|kommen}}
 *: Alemannic German: {{t|gsw|choo}}
 * Greek: {{t+|el|έρχομαι}}
+*: Ancient: {{t|grc|ἔρχομαι|tr=érkhomai|sc=polytonic}}
 * Hebrew: {{t+|he|בא|tr=ba}}
 * Hindi: {{t+|hi|आना|tr=ānā}}
 * Hungarian: {{t+|hu|jön}}
