/* Translations */ Haitian Creole word added. <come#36309815>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -185,6 +185,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Greek: {{t+|el|έρχομαι}}
 *: Ancient: {{t|grc|ἔρχομαι|tr=érkhomai|sc=polytonic}}
 *: Ancient: {{t|grc|ἔρχομαι|tr=érkhomai|sc=polytonic}}
+* Haitian Creole: {{t|ht|vin(i)}}
 * Hebrew: {{t+|he|בא|tr=ba}}
 * Hindi: {{t+|hi|आना|tr=ānā}}
 * Hungarian: {{t+|hu|jön}}
