--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -95,8 +95,9 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 *: Egyptian Arabic: {{t|arz|كوبري|m|tr=kobri|sc=Arab}}
 *: Moroccan Arabic: {{t|ary|قنطرة|f|tr=qənṭra}}
 * Aragonese: {{t+|an|puent|m}}
-* Aramaic: {{t|arc|גֶּשֶׁר|m|tr=gešer}}
-*: Classical Syriac: {{t|syc|ܓܫܪܐ|sc=Syrc}}
+* Aramaic:
+*: Hebrew: {{t|arc|גֶּשֶׁר|m|tr=gešer}}
+*: Classical Syriac: {{t|syc|ܓܫܪܐ|m|tr=gešrāʾ|sc=Syrc}}
 * Armenian: {{t+|hy|կամուրջ}}
 * Aromanian: {{t|rup|punti|f}}, {{t|rup|pumhi|f}}
 * Asturian: {{t|ast|ponte|f}}, {{t|ast|puente|m}}
