/* French */ expand <came#36535029>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -70,7 +70,21 @@ Compare {{etyl|sco|-}} {{m|sco|came||comb}}, {{m|sco|caim||comb}}, and {{etyl|en
 
 ==French==
 
-===Verb===
+===Pronunciation===
+* {{IPA|/kam/|lang=fr}}
+
+===Etymology 1===
+{{bor|fr|nl|kam||[[cog]] of a wheel; originally, [[comb]]}}.
+
+===Noun===
+{{fr-noun|f}}
+
+# [[cam]] {{gloss|part of engine}}
+
+===Etymology 2===
+Inflected form of {{m|fr|camer}}.
+
+====Verb====
 {{fr-verb-form}}
 
 # {{inflection of|camer||1|s|pres|indc|lang=fr}}
