Korean definitions enriched <坌#36545299>

--- a/en/坌/坌.13007.wikitext
+++ b/en/坌/坌.13007.wikitext
@@ -45,7 +45,12 @@
 ===Hanja===
 {{ko-hanja|hangeul=분|rv=bun|mr=pun}}
 
-# {{defn|lang=ko|sort=土04}}
+# [[dust]]
+# [[earth]]
+# bank of earth
+# to [[dig]]
+# to bring together
+
 
 ----
 
