--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -112,7 +112,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 * Navajo: {{t|nv|iiʼniʼ}}
 * Ngarrindjeri: {{t|nay|munti}}
 * Nyunga: {{t|nys|koondarnangor}}
-* Occitan: {{t+|oc|tron}}, {{t|oc|tronada}}
+* Occitan: {{t+|oc|tron|m}}, {{t|oc|tronada|m}}
 * Ossetian: {{t|os|æрвнæрын|sc=Cyrl}}
 * Persian: {{t+|fa|تندر|tr=tondar|sc=fa-Arab}}, {{t+|fa|رعد|tr=ra'd|sc=fa-Arab}}
 * Polish: {{t+|pl|grzmot|m}}, {{t+|pl|grom|m}} {{qualifier|dated, poetic}}
