--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -150,7 +150,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 * Vietnamese: {{t+|vi|sấm}}, {{t+|vi|sét}}
 * Volapük: {{t|vo|töt}}
 * Walloon: {{t+|wa|tonire|f}}, {{t+|wa|tonoere|f}}
-* Welsh: {{t|cy|taranau}}
+* Welsh: {{t|cy|taran|f}}
 * West Frisian: {{t|fy|tonger}}
 {{trans-bottom}}
 
