--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -301,6 +301,9 @@ From modern {{etyl|fr|de}} {{m|fr|blond}}, which possibly from {{etyl|frk|de}}. 
 ===Etymology===
 From {{etyl|fr|ro}} {{m|fr|blond}}.
 
+===Pronunciation===
+* {{IPA|/blond/|lang=ro}}
+
 ===Adjective===
 {{ro-adj|4}}
 
