t+wuu:[[雷]] ([[WT:EDIT|Assisted]]) <thunder#36634289>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -71,6 +71,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 *: Mandarin: {{t+|cmn|雷|tr=léi|sc=Hani}}, {{t|cmn|雷聲|sc=Hani}}, {{t+|cmn|雷声|tr=léishēng|sc=Hani}}, {{t+|cmn|雷鳴|sc=Hani}}, {{t+|cmn|雷鸣|tr=léimíng|sc=Hani}}
 *: Min Dong: {{t|cdo|雷公|tr=lài-gŭng|sc=Hani}}
 *: Min Nan: {{t+|nan|雷|tr=lûi|sc=Hani}}, {{t+|nan|雷公|tr=lûi-kong|sc=Hani}}
+*: Wu: {{t|wuu|雷|tr=le|sc=Hani}}
 * Czech: {{t+|cs|hrom|m}}, {{t|cs|zahřmění|n}}
 * Dalmatian: {{t|dlm|tun|m}}
 * Danish: {{t+|da|torden|c}}
