--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -164,7 +164,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Ngarrindjeri: {{t|nay|kungun}}
 * Norman: {{t|nrf|pâler}} {{qualifier|Jersey}}, {{t|nrf|parlaïr}} {{qualifier|Guernsey}}
 * North Frisian: {{qualifier|Mooring}} {{t|frr|spreege}}; {{qualifier|Föhr-Amrum}} {{t|frr|snaake}}, {{t|frr|spreeg}}
-* Northern Thai: {{t|nod|ᩋᩪ᩶|sc=Lana}}
+* Northern Thai: {{t|nod|ᩋᩪ᩶|sc=Lana}} (u)
 * Norwegian: {{t+|no|snakke}}
 * Novial: {{t|nov|parla}}
 * Occitan: {{t+|oc|parlar}}
