t+mi:[[arawhiti]] ([[WT:EDIT|Assisted]]) <bridge#36863043>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -184,7 +184,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Malayalam: {{t+|ml|പാലം|sc=Mlym}}
 * Maltese: {{t|mt|pont|m}}
 * Manx: {{t|gv|droghad|m}}
-* Maori: {{t|mi|piriti}}, {{t|mi|arawhata}}
+* Maori: {{t|mi|piriti}}, {{t|mi|arawhata}}, {{t|mi|arawhiti}}
 * Marathi: {{t|mr|सेतु|tr=setu|sc=Deva}}
 * Mingrelian: {{t|xmf|ხინჯი}}
 * Mirandese: {{t|mwl|puonte}}
