Fixing quote template which has both [[Category:Quotation templates using both date and year|date= and year= parameters]]. <cut#36889212>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -403,7 +403,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 #: {{ux|en|One student kept trying to '''cut''' in front of the line.}}
 # {{lb|en|intransitive}} To [[intersect]] or [[cross]] in such a way as to [[divide]] in [[half]] or nearly so.
 #: {{ux|en|This road '''cuts''' right through downtown.}}
-#* {{quote-news|year=2011|date=January 18|author=Daniel Taylor|work=Guardian Online
+#* {{quote-news|date=January 18, 2011|author=Daniel Taylor|work=Guardian Online
 |title=[http://www.guardian.co.uk/football/2011/jan/18/manchester-city-leicester-city-fa-cup Manchester City 4 Leicester City 2]
 |passage=Leicester's response was swift although the referee, Mark Halsey, was generous in the extreme when he awarded the penalty from which Paul Gallagher made it 1-1. Neither Joleon Lescott nor Vieira appeared to make any contact with Dyer as he '''cut''' between them.}}
 #* {{quote-magazine|date=2013-08-16|author=[http://www.theguardian.com/profile/johnvidal John Vidal]
