t+tl:[[mantikilya]] t-balance ([[WT:EDIT|Assisted]]) <butter#36892803>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -248,11 +248,11 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Kyrgyz: {{t+|ky|май}}, {{t+|ky|сары май}}, {{t+|ky|сүт май}}, {{t+|ky|паста}}, {{t+|ky|повидло}}, {{t+|ky|май сүйкөө}}
 * Lao: {{t+|lo|ເບີ|sc=Laoo}}
 * Latgalian: {{t|ltg|svīsts}}
-{{trans-mid}}
 * Latin: {{t|la|butyrum}}
 * Latvian: {{t+|lv|sviests|m}}
 * Lithuanian: {{t|lt|sviestas|m}}
 * Lojban: {{t+|jbo|matne}}
+{{trans-mid}}
 * Low German:
 *: German Low German: {{t+|nds-de|Botter|f}}
 * Luxembourgish: {{t+|lb|Botter|m}}
@@ -303,6 +303,7 @@ Compare {{etyl|ae|-}} {{m|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}
 * Spanish: {{t+|es|mantequilla|f}}, {{t+|es|manteca|f}} {{qualifier|Argentina, Paraguay, Uruguay}}
 * Swahili: {{t+|sw|siagi}}
 * Swedish: {{t+|sv|smör|n}}
+* Tagalog: {{t|tl|mantikilya}}
 * Tajik: {{t+|tg|равған|sc=Cyrl}}, {{t|tg|равғани зард|sc=Cyrl}}
 * Tatar: {{t+|tt|май|sc=Cyrl}}
 * Telugu: {{t+|te|వెన్న|sc=Telu}}
