t+hi:[[आदि]] ([[WT:EDIT|Assisted]]) <et cetera#36932467>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -42,6 +42,7 @@ From {{etyl|la|en}} {{m|la|et cētera||and the rest" or "and so forth}}.
 * French: {{t+|fr|et cétéra}}, {{t+|fr|etc.}}, {{t+|fr|et cætera}}
 * Galician: {{t|gl|etcétera}}
 * German: {{t+|de|etc.}}, {{t+|de|et cetera}}
+* Hindi: {{t|hi|आदि|sc=Deva}}
 * Ido: {{t|io|e cetere}}, {{t+|io|e.c.}}, {{t+|io|edc.}}
 * Italian: {{t+|it|eccetera}}
 * Norwegian:
