--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -7,7 +7,7 @@
 * {{rhymes|iːl|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to feel, perceive, touch}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*fōlijaną||to taste, feel}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*pelem-}}, {{m|ine-pro|*pal-||to swing, shake}}. Cognate with {{etyl|sco|-}} {{m|sco|fele||to feel}}, {{etyl|fy|-}} {{m|fy|fiele||to sense, feel}}, {{etyl|nl|-}} {{m|nl|voelen||to feel}}, {{etyl|nds|-}} {{m|nds|fölen||to feel}}, {{m|nds|föhlen}}, {{etyl|de|-}} {{m|de|fühlen||to feel}}, {{etyl|da|-}} {{m|da|føle||to feel}}, and through Indo-European, with {{etyl|la|-}} {{m|la|palpō||touch, feel, caress, pat}}, {{etyl|grc|-}} {{m|grc|πάλλω||swing, shake, shake loose}}.
+From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to feel, perceive, touch}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*fōlijaną||to taste, feel}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*pelem-}}, {{m|ine-pro|*pal-||to swing, shake}}. Cognate with {{etyl|sco|-}} {{m|sco|fele||to feel}}, {{etyl|fy|-}} {{m|fy|fiele||to sense, feel}}, {{etyl|nl|-}} {{m|nl|voelen||to feel}}, {{etyl|nds|-}} {{m|nds|fölen}}, {{m|nds|föhlen||to feel}}, {{etyl|de|-}} {{m|de|fühlen||to feel}}, {{etyl|da|-}} {{m|da|føle||to feel}}, and through Indo-European, with {{etyl|la|-}} {{m|la|palpō||touch, feel, caress, pat}}, {{etyl|grc|-}} {{m|grc|πάλλω||swing, shake, shake loose}}.
 
 ====Verb====
 {{en-verb|feels|feeling|felt}}
